trunk/Archive2/49/5f221f39229edd/output
main.cpp:5:10: warning: integer constant is too large for its type [enabled by default]
 enum A{a=170141183460469231731687303715884105727,b=-1};
          ^
main.cpp:5:1: warning: this decimal constant is unsigned only in ISO C90 [enabled by default]
 enum A{a=170141183460469231731687303715884105727,b=-1};
 ^
main.cpp:5:1: warning: integer constant is too large for 'long' type [-Wlong-long]
main.cpp:5:54: error: no integral type can represent all of the enumerator values for 'A'
 enum A{a=170141183460469231731687303715884105727,b=-1};
                                                      ^
main.cpp:5:8: warning: large integer implicitly truncated to unsigned type [-Woverflow]
 enum A{a=170141183460469231731687303715884105727,b=-1};
        ^
